# Knowit-NFK-25

./: .gitignore  .gitmodules  README.md  pytest.ini  support.json
.github/workflows/: andorid-ci.yml  android-ci.yml  ci.yml  cpp-ci.yml  python-ci.yml  serverjs-ci.yml
Application/: 24-define-platform.md  settings.gradle.kts
Application/app/: build.gradle.kts
Application/gradle/: libs.versions.toml
Backend/153-implement-tls/: how-tls-was-implemented.md
Backend/High-Level-Architecture-Design/: README.md
Backend/LoginTestPage/: login.html
Backend/Other/: stack-forbackend.md
Backend/Research-Store-Images-On-Server/: Readme.md
Backend/Server/: .env  app.js  jwtMiddleware.js  package-lock.json  package.json  readme.md  routeAuthMiddleware.js  router.js  saveImageFromRawData.js  server.js  streamingServer.js  tokenGenerator.js  webSocketAuthMiddleware.js  websocketServer.js
Backend/Server-test-connection-for-Rover/: app.js  exampleClient.py  received_messages.txt
Backend/test-streaming/: clientServer.js  index.html  package-lock.json  streamingServer.js  timeStamp.js
Embedded/: .env  README.md
Embedded/Arduino/: Arduino.ino  (+4 more)
Embedded/Arduino/Motor_controller/: CMakeLists.txt  platformio.ini
Embedded/Arduino/Motor_controller/src/: CommandHandler.cpp  CommandHandler.h  Motor.cpp  Motor.h  MotorControl.cpp  MotorControl.h  client.py  config.h  main.cpp
Embedded/Arduino/Motor_controller/src/Backend/: CommandHandler.cpp  CommandHandler.h  Communication.cpp  Communication.h  client.py
Embedded/Arduino/Motor_controller/src/Calculations/: Drive.cpp  Drive.h
Embedded/Arduino/Motor_controller/src/Commands/: CommandHandler.cpp  CommandHandler.h  Communication.cpp  Communication.h
Embedded/Arduino/Motor_controller/src/Hardware/: HardWareConfig.h  Motor.cpp  MotorControl.cpp  MotorControl.h  motor.cpp  motor.h  motor_control.cpp  motor_control.h
Embedded/Arduino/Motor_controller/src/Hardware/Battery/: BatteryHealth.cpp  BatteryHealth.h  battery_health.cpp  battery_health.h
Embedded/Arduino/Motor_controller/src/Hardware/Motor/: MotorController.cpp  MotorController.h
Embedded/Arduino/Motor_controller/src/Hardware/SpotLights/: SpotLight.cpp  SpotLight.h  spotlight.cpp  spotlight.h
Embedded/Arduino/Motor_controller/src/Jockes_temp/: Drive.cpp  Drive.h
Embedded/Arduino/Motor_controller/src/Jockes_temp/stubs/: Arduino.h
Embedded/Arduino/Motor_controller/test/: drive_test.cpp
Embedded/Arduino/Motor_controller/test/FakeArduino/: Arduino.h
Embedded/Arduino/Motor_controller/test/FakeMotorController/: FakeMotorController.cpp  FakeMotorController.h
Embedded/Arduino/Motor_controller/test/mocks/: MockGlobal.cpp  MotorControllerMock.h
Shared/: How to connect to server.md  Manual-to-setup-rasperriPI-server.md  communication-protocol.md  terrarover-testinterface.html
UX/: .gitignore  README.md
temp_rover_backup/: forwarder.py  handler.py
(+278 files in other folders)
